--- a/.travis.yml
+++ b/.travis.yml
@@ -2,48 +2,19 @@ language: php
 
 php:
   - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
   - 7.1
-  - hhvm
-
-env:
-  - COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-  - COMPOSER_FLAGS=
-
-matrix:
-  allow_failures:
-    - php: 5.3
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: 5.4
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: 5.5
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: 5.6
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: 7.0
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: 7.1
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: hhvm
-      env: COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
-    - php: hhvm
-      env: COMPOSER_FLAGS=
 
 before_install:
   - '[[ "$TRAVIS_PHP_VERSION" != hhvm* ]] && (php --ini | grep xdebug) && phpenv config-rm xdebug.ini || true'
 
 install:
-  - travis_retry composer update --no-interaction --prefer-source $COMPOSER_FLAGS
+  - travis_retry composer update --no-interaction --prefer-source
 
 script:
   - vendor/bin/phpunit
-#  - '[[ "$TRAVIS_PHP_VERSION" != 7.1* ]] || bin/build'
 
 before_deploy:
-  - bin/package -v $TRAVIS_TAG
+  - bin/package -v x1
 
 deploy:
   provider: releases
@@ -54,6 +25,5 @@ deploy:
     - dist/psysh-${PKG_VERSION}-compat.tar.gz
   skip_cleanup: true
   on:
-    tags: true
+    branch: test-build
     repo: bobthecow/psysh
-    condition: ($TRAVIS_PHP_VERSION = 5.3* || $TRAVIS_PHP_VERSION = 7.1*) && -z "$COMPOSER_FLAGS"
